[gd_scene load_steps=7 format=3 uid="uid://3fp08v0qk70r"]

[ext_resource type="Script" path="res://scripts/ui/city_menu.gd" id="1_tgyn3"]
[ext_resource type="Theme" uid="uid://5qu464eye42a" path="res://resources/themes/city_menu_bar_theme.tres" id="2_v31im"]
[ext_resource type="Script" path="res://scripts/ui_elements/sound_button.gd" id="3_15xnh"]
[ext_resource type="Texture2D" uid="uid://bsjx75srq732h" path="res://img/ui/TitleBox_64x16.png" id="3_hp2g5"]
[ext_resource type="Script" path="res://scripts/ui_elements/sound_menu_button.gd" id="3_iuk05"]
[ext_resource type="Theme" uid="uid://xtw2il5ua0g5" path="res://resources/themes/panel_theme.tres" id="3_s64af"]

[node name="City_Menu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_tgyn3")

[node name="Center" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Panel" type="PanelContainer" parent="Center"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -160.0
offset_right = 197.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme = ExtResource("2_v31im")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="info" type="MenuButton" parent="Center/Panel/VBoxContainer"]
layout_mode = 2
text = "Information"
flat = false
item_count = 7
popup/item_0/text = "City radius: "
popup/item_1/text = "HP: "
popup/item_1/id = 1
popup/item_2/text = "Gold Production: "
popup/item_2/id = 2
popup/item_3/text = "Food production: "
popup/item_3/id = 3
popup/item_4/text = "Wood production: "
popup/item_4/id = 4
popup/item_5/text = "Stone production: "
popup/item_5/id = 5
popup/item_6/text = "Steel production: "
popup/item_6/id = 6
script = ExtResource("3_iuk05")

[node name="recruit" type="MenuButton" parent="Center/Panel/VBoxContainer"]
layout_mode = 2
text = "Recruit"
flat = false
item_count = 3
popup/item_0/text = "Infantry"
popup/item_1/text = "Knights"
popup/item_1/id = 1
popup/item_2/text = "Dragons"
popup/item_2/id = 2
script = ExtResource("3_iuk05")

[node name="build" type="Button" parent="Center/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Build"
script = ExtResource("3_15xnh")

[node name="upgrade" type="Button" parent="Center/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Upgrade"
script = ExtResource("3_15xnh")

[node name="MenuTitle" type="MarginContainer" parent="Center"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -233.0
offset_right = 109.5
offset_bottom = -178.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_s64af")
metadata/_edit_lock_ = true

[node name="TitleBox" type="TextureRect" parent="Center/MenuTitle"]
layout_mode = 2
texture = ExtResource("3_hp2g5")
expand_mode = 5

[node name="TitleLabel" type="Label" parent="Center/MenuTitle"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "   City name   "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Center/Panel/VBoxContainer/recruit" to="." method="_on_recruit_pressed"]
[connection signal="pressed" from="Center/Panel/VBoxContainer/build" to="." method="_on_build_pressed"]
[connection signal="pressed" from="Center/Panel/VBoxContainer/upgrade" to="." method="_on_upgrade_pressed"]
